# Engine

./: .gitmodules  CMakeLists.txt  README.md
CUDA/: CMakeLists.txt  Vrapper.cu  Vrapper.h  Wrapper.cu  Wrapper.h  WrapperPrototype.cu  WrapperPrototype.h
Help/Script/: Windows_vs16_2019_Win32.cmd  Windows_vs16_2019_x64.cmd  Windows_vs17_2022_Win32.cmd  Windows_vs17_2022_x64 disable Physic.cmd  Windows_vs17_2022_x64.cmd
Platform/Win/: main.cpp  main.h
Source/: Core.h  Engine.cpp  Engine.h  FileManager.h  Game.h  Log.h  Screen.h
Source/Callback/: Callback.cpp  Callback.h  Event.h  VirtualKey.h
Source/Common/: Common.h  CommonEngine.cpp  CommonEngine.h  DataClass.h  Help.cpp  Help.h  HelpJson.cpp  HelpJson.h  PrintTemplate.h  TemplateEngine.h  WindowsWin32.cpp  WindowsWin32.h
Source/Draw/: Camera.cpp  Camera.h  Draw.cpp  Draw.h  DrawLight.cpp  DrawLight.h  DrawLine.cpp  DrawLine.h  DrawText.cpp  DrawText.h  Shader.cpp  TestFreeType2.cpp  TestFreeType2.h  Text.cpp  Text.h
Source/Draw/Camera/: Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  CameraControlOutside.cpp  CameraOrtho.h  (+8 more)
Source/Draw2/: Draw2.cpp  Draw2.h  Shader2.cpp  Shader2.h
Source/Events/: Event.cpp  Event.h
Source/ImGuiManager/: UI.cpp  UI.h
Source/Interface/: Rect.cpp  Rect.h
Source/Math/: Vector.h
Source/MyStl/: Event.h  Singleton.h  shared.h
Source/Object/: Color.h  Item.cpp  Item.h  Line.cpp  Line.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Point.h  Position.h  Shape.cpp  Shape.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
Source/Physics/: Physics.cpp  Physics.h
Source/Platform/: CompileParams.h
Source/Sound/: Sound.cpp  Sound.h
Source/UI/: UIData.cpp  UIData.h  UIElement.cpp  UIElement.h  UISample.cpp  UISample.h  UIScreen.cpp  UIScreen.h
(+51 files in other folders)
